change registration forms

--- a/chemcloud/templates/registration/registration_complete.html
+++ b/chemcloud/templates/registration/registration_complete.html
@@ -2,6 +2,10 @@
 
 
 {% block body_block %}
-<h1>Registration Complete</h1>
-        <p>You are now registered</p>
+<div class="page-header">
+                <h1>Регистрация завершена</h1>
+            </div>
+<div class="page-content">
+Тут наверное, ссылки на переход. вообще надо чтоб сразу и вход происходил
+</div>
 {% endblock %}
