--- a/chemcloud/templates/registration/login.html
+++ b/chemcloud/templates/registration/login.html
@@ -2,14 +2,19 @@
 {% load i18n %}
 
 {% block body_block %}
-<h1>Login</h1>
+
+<div class="page-header">
+                <h1>Вход</h1>
+            </div>
+<div class="page-content">
         <form method="post" action=".">
                 {% csrf_token %}
                 {{ form.as_p }}
 
-                <input type="submit" value="Log in" />
+                <input type="submit" value="Войти" />
                 <input type="hidden" name="next" value="{{ next }}" />
                 </form>
 
-        <p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
+        <p> <a href="{% url 'registration_register' %}">Зарегистрироваться</a>!</p>
+</div>
 {% endblock %}
