--- a/chemcloud/templates/registration/logout.html
+++ b/chemcloud/templates/registration/logout.html
@@ -2,6 +2,11 @@
 
 
 {% block body_block %}
-<h1>Logged Out</h1>
-        <p>You are now logged out.</p>
+<div class="page-header">
+                <h1>Выход</h1>
+            </div>
+<div class="page-content">
+        <p>Вы разлогинились</p>
+                    </div>
+
 {% endblock %}
