--- a/chemcloud/templates/chemical/nav_cabinet_main.html
+++ b/chemcloud/templates/chemical/nav_cabinet_main.html
@@ -23,6 +23,10 @@
                    <li>
                         <a href="{% url 'substance_dict' %}">Справочник веществ</a>
                     </li>
+                   <li>
+                        <a href="{% url 'dictionaries' %}">Справочники</a>
+                    </li>
+                   
                    
                    <li>
                         <a href="{% url 'calculations_all' %}">Все расчеты</a>
