django tables + rusification

--- a/chemcloud/templates/chemical/base_cabinet.html
+++ b/chemcloud/templates/chemical/base_cabinet.html
@@ -14,9 +14,10 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-
     <!-- Custom CSS -->
-    <link href="{% static "css/landing-page.css" %}" rel="stylesheet">
+    <link href="{% static "css/landing-page.css" %}" rel="stylesheet">    
+    <!-- django-tables2 CSS -->
+    <link href="{% static "django_tables2/themes/paleblue/css/screen.css" %}"  rel="stylesheet" />
 
     <!-- Custom Fonts -->
     <link href="{% static "font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
