--- a/chemcloud/templates/chemical/atoms_all.html
+++ b/chemcloud/templates/chemical/atoms_all.html
@@ -1,15 +1,17 @@
 {% extends 'chemical/base_cabinet.html' %}
 
 {% load staticfiles %}
+{% load render_table from django_tables2 %}
 
 
 {% block body_block %}
+   
     <div class="page-header">
                 <h1>Атомы</h1>
             </div>
             <div class="page-content">
-            список атомов с поиском
-           
+            
+           {% render_table atom %}
 
             </div>
 {% endblock %}
