Тааблицы, детали атома, таблица веществ, ссылки на детали вещества

--- a/chemcloud/templates/chemical/nav_cabinet_main.html
+++ b/chemcloud/templates/chemical/nav_cabinet_main.html
@@ -21,7 +21,7 @@
                     </li>
                    
                    <li>
-                        <a href="{% url 'substance_dict' %}">Справочник веществ</a>
+                        <a href="{% url 'substance_all' %}">Справочник веществ</a>
                     </li>
                    <li>
                         <a href="{% url 'dictionaries' %}">Справочники</a>
