--- a/chemcloud/templates/chemical/scheme_all.html
+++ b/chemcloud/templates/chemical/scheme_all.html
@@ -2,14 +2,14 @@
 
 {% load staticfiles %}
 
-
 {% block body_block %}
 	<div class="page-header">
 		<h1>Механизмы</h1>
 	</div>
 		<div class="page-content">
-
-			<a class="btn btn-default" href="new">Создать механизм</a>
+			{% if id_reac %}
+			<a class="btn btn-default" href="{% url 'scheme_new' id_reac %}">Создать механизм</a> <br>
+			{% endif %}
 			{% if schemes %}
 				<table>
 					<tr>
@@ -21,16 +21,16 @@
 					</tr>
 					{% for scheme in schemes %}
 					<tr>
-						<td>{{ scheme.fname }}</td>
+						<td>{{ scheme.name }}</td>
 						<td>TODO</td>
-						<td><input type="checkbox" {% if scheme.fis_possible %}checked {% endif %} readonly></td>
-						<td>{{scheme.fupdated_date}}<!--strftime("%Y-%m-%d %H:%M:%S") --></td>
-						<td><a href="{{ scheme.fid_scheme }}/detail "> Детали</a> </td> 
+						<td><input type="checkbox" {% if scheme.is_possible %}checked {% endif %} readonly></td>
+						<td>{{scheme.updated_date}}<!--strftime("%Y-%m-%d %H:%M:%S") --></td>
+						<td><a href="{% url 'scheme_detail' scheme.id_scheme %}"> Детали</a> </td> 
 					</tr>
 					{% endfor%}
 				</table>
 			{% else %}
-				<strong> There are no schemes </strong>
+				<strong> Пока не создано ни одного механизмаы </strong>
 			{% endif %}
 
             </div>
