Подправлена работа с механизмами с учетом новой панели слева. Поправлены урлы в схемах и экспериментах, чтобы всегда передавался ид реакции. В странице все реакции удалено отображение ИД и убран временно у кнопки тэг pull-left, потому что из-за него кнопка на добавление реакции не является ссылкой

--- a/chemcloud/templates/chemical/reaction_all.html
+++ b/chemcloud/templates/chemical/reaction_all.html
@@ -14,7 +14,7 @@
                 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-body"> 
-          <a class = "btn btn-primary pull-left" href = "{% url 'reaction_new' %}" role = "button">Добавить реакцию</a>       
+          <a class = "btn btn-primary" href = "{% url 'reaction_new' %}" role = "button">Добавить реакцию</a> <!-- TODO: убрала из кнопки pull-left. Без него кнопка становится нормальной ссылкой, хоть и сбивается выравнивание -->
        
           
                    
