В базовые шаблоны добавлены ссылки на собственные css-стили. Во всех шаблонах типа _all кнопка создания чего-либо нового переделана на btn-new

--- a/chemcloud/templates/chemical/experiment_all.html
+++ b/chemcloud/templates/chemical/experiment_all.html
@@ -9,7 +9,7 @@
 	
 <div class="page-content">
     {% if id_reaction %}
-        <a class="btn btn-default" href="{% url 'experiment_new' id_reaction %}">Создать эксперимент</a> <br>
+        <a class="btn btn-new" href="{% url 'experiment_new' id_reaction %}">Создать эксперимент</a> <br>
     {% endif %}
     {% if experiments %}
         <table>
