--- a/chemcloud/templates/chemical/reaction_all.html
+++ b/chemcloud/templates/chemical/reaction_all.html
@@ -14,7 +14,7 @@
                 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-body"> 
-          <a class = "btn btn-primary" href = "{% url 'reaction_new' %}" role = "button">Добавить реакцию</a> <!-- TODO: убрала из кнопки pull-left. Без него кнопка становится нормальной ссылкой, хоть и сбивается выравнивание -->
+          <a class = "btn btn-new" href = "{% url 'reaction_new' %}" role = "button">Добавить реакцию</a> <!-- TODO: убрала из кнопки pull-left. Без него кнопка становится нормальной ссылкой, хоть и сбивается выравнивание -->
        
           
                    
