--- a/chemcloud/templates/chemical/scheme_all.html
+++ b/chemcloud/templates/chemical/scheme_all.html
@@ -25,7 +25,7 @@
 						<td>TODO</td>
 						<td><input type="checkbox" {% if scheme.fis_possible %}checked {% endif %} readonly></td>
 						<td>{{scheme.fupdated_date}}<!--strftime("%Y-%m-%d %H:%M:%S") --></td>
-						<td><a href="{{ scheme.fid_scheme }}/details "> Детали</a> </td> 
+						<td><a href="{{ scheme.fid_scheme }}/detail "> Детали</a> </td> 
 					</tr>
 					{% endfor%}
 				</table>
