--- a/chemcloud/templates/chemical/scheme_detail.html
+++ b/chemcloud/templates/chemical/scheme_detail.html
@@ -8,8 +8,8 @@
 		<h1>Детали механизма</h1>
 	</div>
 		<div class="page-content">
-			{% if scheme_details %}
-{% for scheme in scheme_details %}
+			{% if scheme_detail %}
+{% for scheme in scheme_detail %}
 				<table>
 					<tr>
 						<td>Название:</td>
