--- a/chemcloud/templates/chemical/substance_all.html
+++ b/chemcloud/templates/chemical/substance_all.html
@@ -14,7 +14,7 @@
   <!-- Default panel contents -->
   <div class="panel-body">
           <button type="button" class="btn btn-primary pull-left">Добавить вещество</button>         
-          <a href="{% url 'atoms_all' %}" class="pull-right">Таблица Менделеева</a>
+          <a href="{% url 'atom_all' %}" class="pull-right">Таблица Менделеева</a>
           
                    
                      
