--- a/chemcloud/templates/nav_main.html
+++ b/chemcloud/templates/nav_main.html
@@ -48,7 +48,7 @@
                           
                   {% if user.is_authenticated %}
                   <ul class="list-inline">
-                   <li><a href="{% url 'reactions_all' %}">Список реакций</a></li>
+                   <li><a href="{% url 'reaction_all' %}">Список реакций</a></li>
                   </ul>
                   
                   <ul class="list-inline">
