--- a/chemcloud/templates/chemical/atom_detail.html
+++ b/chemcloud/templates/chemical/atom_detail.html
@@ -8,7 +8,7 @@
    
     <div class="page-header">
 
-    <h1> <a href="{% url 'atoms_all' %}" class="pull-left"><span class="glyphicon glyphicon-menu-left"></span></a>   Детали атома</h1>
+    <h1> <a href="{% url 'atom_all' %}" class="pull-left"><span class="glyphicon glyphicon-menu-left"></span></a>   Детали атома</h1>
            
             
     </div>
