--- a/chemcloud/templates/chemical/nav_cabinet_main.html
+++ b/chemcloud/templates/chemical/nav_cabinet_main.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-left">
                     <li>
-                        <a href="{% url 'reactions_all' %}">Реакции</a>
+                        <a href="{% url 'reaction_all' %}">Реакции</a>
                     </li>
                    
                    <li>
@@ -29,7 +29,7 @@
                    
                    
                    <li>
-                        <a href="{% url 'calculations_all' %}">Все расчеты</a>
+                        <a href="{% url 'calculation_all' %}">Все расчеты</a>
                     </li>
                    
                     <li>
