--- a/chemcloud/templates/chemmain/faq.html
+++ b/chemcloud/templates/chemmain/faq.html
@@ -5,11 +5,14 @@
 
 {% block body_block %}
     <div class="page-header">
-                <h1>FAQ</h1>
-            </div>
-            <div class="page-content">
-            faq content
-           
+        <h1>FAQ</h1>
+    </div>
+    <div class="page-content">
+        {% for faq in faqs %}
+    
+        <big>{{ faq.question }}</big><br/>
+		  <small>{{ faq.answer }}</small><br/><br/>
 
-            </div>
+        {% endfor %}       
+    </div>
 {% endblock %}
