--- a/chemcloud/templates/chemical/base_reaction.html
+++ b/chemcloud/templates/chemical/base_reaction.html
@@ -14,9 +14,10 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-
     <!-- Custom CSS -->
-    <link href="{% static "css/landing-page.css" %}" rel="stylesheet">
+    <link href="{% static "css/landing-page.css" %}" rel="stylesheet">    
+    <!-- django-tables2 CSS -->
+    <link href="{% static "django_tables2/themes/paleblue/css/screen.css" %}"  rel="stylesheet" />
 
     <!-- Custom Fonts -->
     <link href="{% static "font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
@@ -35,15 +36,34 @@
 <header>
   
   <div class="container">      
-    {% include "nav_main.html" %}    
+    {% include "chemical/nav_cabinet_main.html" %}    
 </div> 
+
+
 </header>
-   
+ 
+ 
+  <div class="row">
+         
+    
+  <div class="col-xs-2">
+    
+    {% include "chemical/panel_reaction.html" %}
+	    
+        
+        
+	  </div>
+	   
+    
+    <div class="col-xs-5">
 
 <div class="container">
    
   {% block body_block %}  {% endblock %}
 </div>
+  
+    </div>
+    </div>
    
    
     {% include "footer.html" %}
