Разный вид панели навигации в открытой части сайта в зависимости от того авторизован поьзователь или нет

--- a/chemcloud/templates/base.html
+++ b/chemcloud/templates/base.html
@@ -34,8 +34,12 @@
 <body>
 <header>
   
-  <div class="container">      
-    {% include "nav_main.html" %}    
+  <div class="container">    
+   {% if user.is_authenticated %}
+     {% include "chemical/nav_cabinet_main.html" %} 
+    {% else %}    
+    {% include "nav_main.html" %}  
+    {% endif %}  
 </div> 
 </header>
    
