--- a/chemcloud/templates/footer.html
+++ b/chemcloud/templates/footer.html
@@ -19,6 +19,15 @@
                         <li>
                         <a href="{% url 'contact' %}">Контакты</a>
                     </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                     <li>
+                        <a href="{% url 'news' %}">Новости</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="{% url 'prices' %}">Прайс</a>
+                    </li>
+                    
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; ChemKinOptima 2016. All Rights Reserved</p>
                 </div>
