Сделала шаблон для вывода форм добавления экземпляров моделей

--- a/chemcloud/templates/chemical/scheme_new.html
+++ b/chemcloud/templates/chemical/scheme_new.html
@@ -11,6 +11,6 @@
 		<form method="POST" class="scheme-form">{% csrf_token %}
 			{{ form.as_p }}
 			<button type="submit" class="save btn btn-default">Сохранить</button>
-		</form 
+        </form >
    </div>
 {% endblock %}
