--- a/chemcloud/templates/chemical/reaction_all.html
+++ b/chemcloud/templates/chemical/reaction_all.html
@@ -7,9 +7,43 @@
 
 {% block body_block %}
     <div class="page-header">
-                <h1>Все реакции</h1>
+                <h1>Реакции</h1>
             </div>
             <div class="page-content">
+           
+                <div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-body"> 
+          <a class = "btn btn-primary pull-left" href = "{% url 'reaction_new' %}" role = "button">Добавить реакцию</a>       
+       
+          
+                   
+                     
+     <div class="container">
+	<div class="row" >
+        <div class="col-md-6">
+    		
+            <div id="custom-search-input pull-right">
+                <div class="input-group col-md-12">
+                    <input type="text" class="form-control input-md" placeholder="Введите строку для поиска" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-info btn-md" type="button">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+	</div>
+</div>
+
+  
+</div>
+            
+            
+ 
+
+            </div>
           
            
              {% render_table reaction %}
