--- a/chemcloud/templates/chemical/substance_all.html
+++ b/chemcloud/templates/chemical/substance_all.html
@@ -12,8 +12,8 @@
            
                 <div class="panel panel-default">
   <!-- Default panel contents -->
-  <div class="panel-body">
-          <button type="button" class="btn btn-primary pull-left">Добавить вещество</button>         
+  <div class="panel-body"> 
+          <a class = "btn btn-primary pull-left" href = "{% url 'substance_new' %}" role = "button">Добавить вещество</a>       
           <a href="{% url 'atom_all' %}" class="pull-right">Таблица Менделеева</a>
           
                    
@@ -47,28 +47,4 @@
                       {% render_table substance %}
                        <!-- Table -->
                        
-  <table class="table table-striped table-bordered ">
-  <thead class="thead-inverse">
-    <tr>
-      <th>Название вещества</th>
-      <th>Брутто-формула</th>
-      <th>Изображение</th>
-      <th>mol-формат</th>
-      <th>Заряд</th>
-      <th>Радикал</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">Молекула водорода</th>
-      <td>H2</td>
-      <td>+</td>
-      <td>+</td>
-      <td>0</td>
-      <td>False</td>
-        <td><a href="#" >Детали</a></td>
-    </tr>
-  </tbody>
-</table>
 {% endblock %}
