--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -1,14 +1,19 @@
 {% extends 'chemical/base_reaction.html' %}
 
 {% load staticfiles %}
+{% load render_table from django_tables2 %}
 
 
 {% block body_block %}
 	<div class="page-header">
-		<h1>Редактирование механизма</h1>
+		{% if scheme_name %}
+		<h1> {{ scheme_name }}</h1>
+		{% else %}
+		<h1> {if Неизвестный механизм</h1>
+		{% endif %}
 	</div>
 	
 	<div class="page-content">
-
+				{% render_table steps %}
 	</div>
 {% endblock %}
