Модель для ВеществаРеакции + пустышка для лога по реакции

--- a/chemcloud/templates/chemical/panel_reaction.html
+++ b/chemcloud/templates/chemical/panel_reaction.html
@@ -32,7 +32,11 @@
                         <a href="{% url 'statistic' id_reaction %}">Статистика</a>
                     </li>                               
                   
-                    
+                    </li>
+                         
+                                                        <li>
+                        <a href="{% url 'log' id_reaction %}">Журнал</a>
+                    </li> 
                     
                 </ul>
             
