--- a/chemcloud/templates/chemical/react_substance_all.html
+++ b/chemcloud/templates/chemical/react_substance_all.html
@@ -1,7 +1,7 @@
 {% extends 'chemical/base_reaction.html' %}
 
 {% load staticfiles %}
-
+{% load render_table from django_tables2 %}
 
 
 {% block body_block %}
@@ -15,8 +15,24 @@
 <div class="page-content">
         
             
+                <div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-body"> 
+          <a class = "btn btn-new pull-left" href = "{% url 'react_substance_new' id_reaction %}" role = "button">Добавить вещество</a>       
+         
+          
+                 
+</div>
+
+
+
+
+
 
 </div>          
 
             </div>
+            
+             {% render_table substance %}
+                       <!-- Table -->
 {% endblock %}
