начало создания кнопок для изменения порядка стадий механизма

--- a/chemcloud/static/custom/other.css
+++ b/chemcloud/static/custom/other.css
@@ -7,3 +7,20 @@
 	color          : #000000;
 	border-color:    #000000;
 }
+
+/*
+убрать подчеркивание, например для ссылок <A
+селектор по идентификатору
+*/
+#arrow {
+text-decoration: none;
+}
+
+/*
+при наведении курсора становится оранжевым*/
+#arrow:hover {
+/*
+text-decoration: underline; /*подчеркивание при наведении*/
+*/
+color: #FEC63D;
+}
