--- a/chemcloud/templates/chemical/base_reaction.html
+++ b/chemcloud/templates/chemical/base_reaction.html
@@ -77,6 +77,9 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
 
+    <!-- Custom Ajax code -->
+    <script src="{% static "js/chemical-ajax.js" %}"></script>
+
 </body>
 
 </html>
