детали эксперимента и добавление эксперимента

--- a/chemcloud/templates/chemical/experiment_new.html
+++ b/chemcloud/templates/chemical/experiment_new.html
@@ -10,7 +10,7 @@
 	<div class="page-content">
 		<form method="POST" class="experiment-form">{% csrf_token %}
 			{{ form.as_p }}
-		<!-- TODO	<button type="submit" class="save btn btn-default">Сохранить</button>-->
+		<button type="submit" class="save btn btn-default">Сохранить</button>
         </form >
    </div>
 {% endblock %}
