Ссылка на журнал. Вещества Реакции. Лениза, исправила в Эксперименте ошибку

--- a/chemcloud/templates/chemical/react_substance_new.html
+++ b/chemcloud/templates/chemical/react_substance_new.html
@@ -9,5 +9,18 @@
 	</div>
 	<div class="page-content">
 		
+		<div class="page-content">
+            
+           
+ <form method="POST" class="form" action="{% url 'react_substance_new' id_reaction %}">  
+            
+            {% include "chemical/form_body_new.html" %} 
+            
+            
+</form >
+
+            </div>
+		
+		
    </div>
 {% endblock %}
