--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -7,7 +7,7 @@
 	<div class="page-header">
 		   <div class="page-header">
 
-    <h1> <a href="{% url 'react_substance_all' id_reaction %}" class="pull-left"><span class="glyphicon glyphicon-menu-left"></span></a>Детали вещества реакции (read only)</h1>
+    <h1> <a href="{% url 'react_substance_all' id_reaction %}" class="pull-left"><span class="glyphicon glyphicon-menu-left"></span></a>Детали вещества реакции {% if is_owner %} (Owner grants) {% else %}(Read only){% endif %} </h1>
            
             
     </div>
