--- a/chemcloud/templates/chemical/reaction_detail.html
+++ b/chemcloud/templates/chemical/reaction_detail.html
@@ -8,15 +8,23 @@
    
     <div class="page-header">
 
-    <h1> <a href="{% url 'reaction_all' %}" class="pull-left"><span class="glyphicon glyphicon-menu-left"></span></a>   Детали реакции</h1>
+    <h1> <a href="{% url 'reaction_all' %}" class="pull-left"><span class="glyphicon glyphicon-menu-left"></span>
+          </a>   Детали реакции {% if is_owner %} (Owner grants) {% else %}(Read only){% endif %} </h1>
            
             
-    </div>
-<div class="page-content">
+    </div> 
         
             
-
-</div>          
-
-            </div>
+ <div class="table">
+  <table class="table">
+    <tbody>
+     <tr>
+        <td class="text-right">Название</td>
+        <td class="text-left">{{  reaction.name }}</td>
+      </tr>
+  
+      
+    </tbody>
+  </table>
+</div>
 {% endblock %}
