--- a/chemcloud/templates/chemical/scheme_new.html
+++ b/chemcloud/templates/chemical/scheme_new.html
@@ -8,9 +8,13 @@
 		<h1>Добавление нового механизма</h1>
 	</div>
 	<div class="page-content">
-		<form method="POST" class="scheme-form">{% csrf_token %}
-			{{ form.as_p }}
-			<button type="submit" class="save btn btn-default">Сохранить</button>
-        </form >
+        
+         <form method="POST" class="form" action="{% url 'scheme_new' id_reaction %}">  
+            
+            {% include "chemical/form_body_new.html" %} 
+            
+            
+</form >
+        
    </div>
 {% endblock %}
