Изменение порядка стадии механизма с использованием ajax. Заготовка

--- a/chemcloud/templates/chemical/base_reaction.html
+++ b/chemcloud/templates/chemical/base_reaction.html
@@ -70,10 +70,9 @@
    
    
     {% include "footer.html" %}
-
     <!-- jQuery -->
     <script src="{% static "js/jquery.js" %}"></script>
-
+    <script src="{% static "js/jquery.min.js" %}"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
 
@@ -81,5 +80,6 @@
     <script src="{% static "js/chemical-ajax.js" %}"></script>
 
 </body>
+
 
 </html>
