--- a/chemcloud/static/custom/other.css
+++ b/chemcloud/static/custom/other.css
@@ -16,6 +16,12 @@
 text-decoration: none;
 }
 
+.changeorder {
+	outline : none;
+	background-color: #FEC63D; 
+	color          : #000000;
+	border-color:    #000000;
+}
 /*
 при наведении курсора становится оранжевым*/
 #arrow:hover {
