убрала отладочную инфу

--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -14,10 +14,10 @@
 		{% endif %}
 	</div>
 	
-	<div id="all-steps" class="page-content">
+	<div class="page-content">
 		{% if steps %}	
 			<div class="table-container">
-				<table class="paleblue">
+				<table id="all-steps" class="paleblue">
 					<thead>
 						<tr>
 							<th class="order_arrows">Переместить</th>
