--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -15,9 +15,10 @@
 	</div>
 	
 	<div class="page-content">
-		{% if steps %}	
+		
+{% if steps %}	
 			<div class="table-container">
-				<table id="all-steps" class="paleblue">
+				<table id="all-steps"  class="paleblue">
 					<thead>
 						<tr>
 							<th class="order_arrows">Переместить</th>
@@ -30,9 +31,9 @@
 	    			<tbody>
 						{% for step in steps %}
 						<tr class="even">
-							<td><button id="change_order" class="changeorder" data-stepid="{{step.id_step}}" data-curorder="{{step.order}}" data-direction="up"  type="button" data-reacid="{{id_reaction}}" data-schemeid="{{step.scheme.id_scheme}}">&#9650</button></br>
-<button id="change_order" class="changeorder" data-stepid="{{step.id_step}}" data-curorder="{{step.order}}" data-direction="down"  type="button"  data-reacid="{{id_reaction}}" data-schemeid="{{step.scheme.id_scheme}}">&#9660</button></td>
-							<td> {{ step.order }} </td>
+							<td><button id="btn_{{step.id_step}}up" class="changeorder" data-stepid="{{step.id_step}}" data-direction="up"  type="button" data-reacid="{{id_reaction}}" data-schemeid="{{step.scheme.id_scheme}}">&#9650</button></br>
+<button id="btn_{{step.id_step}}down" class="changeorder" data-stepid="{{step.id_step}}" data-direction="down"  type="button"  data-reacid="{{id_reaction}}" data-schemeid="{{step.scheme.id_scheme}}">&#9660</button></td>
+							<td id="order_{{step.id_step}}"> {{ step.order }} </td>
 							<td>{{ step.name }}</td>
 							<td> {% if step.is_revers %} &#8596 {% else %} &#8594 {% endif %} </td>
 							<td><a href="{% url 'step_detail' id_reaction step.scheme.id_scheme step.id_step %}"> Детали</a> </td> 
