--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -4,21 +4,18 @@
 
 
 {% block body_block %}
-	<div class="page-header">
-		   <div class="page-header">
+<div class="page-header">
 
     <h1> <a href="{% url 'react_substance_all' id_reaction %}" class="pull-left"><span class="glyphicon glyphicon-menu-left"></span></a>Детали вещества реакции {% if is_owner %} (Owner grants) {% else %}(Read only){% endif %} </h1>
            
             
     </div>
-<div class="page-content">
-        
+<div class="page-content">       
             
-   <div class="table">
-  <table class="table">
-    <tbody>
+  <table class="table col-xs-6">
+     <tbody>
      <tr>
-        <td class="text-right">Название</td>
+        <td class="text-right col-xs-4">Название</td>
         <td class="text-left">{{  substance.substance.name }}</td>
       </tr>
       <tr>
@@ -41,11 +38,11 @@
         <td class="text-left">{{  substance.note }}</td>
       </tr>
       
-    </tbody>
+      </tbody>
   </table>
-</div>          
+         
 
             </div>
 
-            </div>
+           
 {% endblock %}
