Красивые Детали с меню для Реакции и Вещество Реакции

--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -10,7 +10,11 @@
            
             
     </div>
-<div class="page-content">       
+<div class="page-content">    
+           
+<div class="row">          
+ <div class="col-xs-7">
+    
             
   <table class="table col-xs-6">
      <tbody>
@@ -40,6 +44,17 @@
       
       </tbody>
   </table>
+    </div>
+        
+        <div class=" col-xs-3">
+    
+    {% include "chemical/react_substance_detail_menu.html" %} 
+    
+     
+    
+    
+     
+      </div> 
          
 
             </div>
