добавлены модели в chemical_models и вынесены в админку

--- a/chemcloud/templates/chemical/reaction_detail.html
+++ b/chemcloud/templates/chemical/reaction_detail.html
@@ -36,10 +36,10 @@
          <div class="well well-sm">
       
             <div >
-  <label>Нестационарная</label>: {{  reaction.is_notstationary }}
+  <label>Нестационарная</label>: <!--{{  reaction.is_notstationary }}-->
 </div>
                    <div >
-  <label>Изотермическая</label>: {{  reaction.is_isothermal }}
+  <label>Изотермическая</label>: <!--{{  reaction.is_isothermal }}-->
 </div>
 
          </div>
